manifests/1_app.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: acmeair-monolithic-java-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: acmeair
        tier: monolithic
    spec:
      containers:
      - name: acmeair-java
        image: IMAGE_NAME
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "700m"
